refactor\!: update specs to camelCase
